# wiser-cpp

./: CMakeLists.txt  LICENSE  README.en.md  README.md  build.sh
demo/: demo.cpp  loader_demo.cpp
demo/data/: sample.jsonl  sample_array.json  sample_array_test.json  sample_dataset.tsv
include/wiser/: compression_utils.h  config.h  database.h  json_loader.h  postings.h  search_engine.h  tokenizer.h  tsv_loader.h  types.h  utils.h  wiki_loader.h  wiser.h  wiser_environment.h
include/wiser/web/: graceful.h  routes.h  task_queue.h
src/: database.cpp  json_loader.cpp  main.cpp  postings.cpp  search_engine.cpp  tokenizer.cpp  tsv_loader.cpp  utils.cpp  web_server.cpp  wiki_loader.cpp  wiser_environment.cpp
src/web/: graceful.cpp  routes.cpp  task_queue.cpp
web/: index.html  script.js  styles-options.css  styles.css
